--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
     "framer-motion": "^12.11.0",
+    "gsap": "^3.13.0",
     "i18next": "^25.1.2",
     "lucide-react": "^0.510.0",
     "octokit": "^4.1.3",
