--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -17,6 +17,10 @@ jobs:
         run: npm install
       - name: Build project
         run: npm run build
+        env:
+          VITE_EMAIL_SERVICE: ${{ secrets.MY_EMAIL_SERVICE }}
+          VITE_EMAIL_TO: ${{ secrets.MY_EMAIL_TO }}
+          VITE_EMAIL_PASS: ${{ secrets.MY_EMAIL_PASS }}
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
