--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -87,3 +87,73 @@ jobs:
           sleep 5
           lighthouse http://localhost:3000 --chrome-flags="--headless" --output=json --output-path=./lighthouse-results.json
         continue-on-error: true
+
+  # Job de deploy a Firebase
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [test, security]
+    # Solo ejecutar en push a main (no en PRs)
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Build project for production
+        run: npm run build
+        env:
+          VITE_EMAIL_SERVICE: ${{ secrets.MY_EMAIL_SERVICE }}
+          VITE_EMAIL_TO: ${{ secrets.MY_EMAIL_TO }}
+          VITE_EMAIL_PASS: ${{ secrets.MY_EMAIL_PASS }}
+      
+      - name: Deploy to Firebase
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PORFOLIO_VLAD }}
+          projectId: portfolio-896a3
+          channelId: live
+
+  # Job de deploy preview para PRs
+  deploy-preview:
+    runs-on: ubuntu-latest
+    needs: [test]
+    # Solo ejecutar en PRs a main
+    if: github.event_name == 'pull_request' && github.base_ref == 'main'
+    
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Build project for preview
+        run: npm run build
+        env:
+          VITE_EMAIL_SERVICE: ${{ secrets.MY_EMAIL_SERVICE }}
+          VITE_EMAIL_TO: ${{ secrets.MY_EMAIL_TO }}
+          VITE_EMAIL_PASS: ${{ secrets.MY_EMAIL_PASS }}
+      
+      - name: Deploy preview to Firebase
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PORFOLIO_VLAD }}
+          projectId: porfolio-vlad
+          expires: 30d
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
