--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:all": "powershell -ExecutionPolicy Bypass -File ./scripts/start-dev.ps1",
+    "dev:blog": "cd microfrontends/angular-blog && npm start",
     "prebuild": "node scripts/convert-images.mjs",
     "build": "tsc -b && vite build",
+    "build:blog": "cd microfrontends/angular-blog && npm run build",
+    "build:all": "npm run build && npm run build:blog",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
     "preview": "vite preview",
     "deploy": "npm run build && firebase deploy --only hosting",
-    "deploy:preview": "npm run build && firebase hosting:channel:deploy preview"
+    "deploy:preview": "npm run build && firebase hosting:channel:deploy preview",
+    "deploy:all": "npm run build:all && firebase deploy --only hosting"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.15.1",
