feat(blog): update Firebase configuration and Angular blog settings
- Added rewrites and headers for blog routes in firebase.json.
- Set baseHref for production and development in angular.json.
- Updated server routes to handle blog posts in app.routes.server.ts.
- Fixed routerLink in blog-card.component.ts to match new routing structure.
- Corrected DOCTYPE in index.html for proper HTML5 compliance.
- Enhanced package.json with new deployment scripts and improved build process.
- Updated BlogMicrofrontend.tsx to include environment-specific blog URLs.
- Added blog microfrontend to tsconfig.app.tsbuildinfo for TypeScript compilation.
- Created .firebaseignore to exclude unnecessary files from Firebase deployment.

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "porfolio-vlad"
-  }
+    "default": "porfolio-vlad",
+    "production": "porfolio-vlad",
+    "staging": "porfolio-vlad-staging"
+  },
+  "etags": {}
 }
