--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "prebuild": "node scripts/convert-images.mjs",
     "build": "tsc -b && vite build",
     "build:blog": "cd microfrontends/angular-blog && npm run build",
-    "build:all": "npm run build && npm run build:blog",
+    "build:all": "npm run build && npm run build:blog && npm run prepare:deploy",
+    "prepare:deploy": "powershell -ExecutionPolicy Bypass -File ./scripts/prepare-deploy.ps1",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
     "preview": "vite preview",
-    "deploy": "npm run build && firebase deploy --only hosting",
-    "deploy:preview": "npm run build && firebase hosting:channel:deploy preview",
-    "deploy:all": "npm run build:all && firebase deploy --only hosting"
+    "deploy": "npm run build:all && firebase deploy --only hosting",
+    "deploy:preview": "npm run build:all && firebase hosting:channel:deploy preview",
+    "deploy:staging": "npm run build:all && firebase use staging && firebase deploy --only hosting",
+    "deploy:production": "npm run build:all && firebase use production && firebase deploy --only hosting",
+    "preview:staging": "firebase use staging && firebase hosting:channel:deploy preview",
+    "setup:firebase": "powershell -ExecutionPolicy Bypass -File ./scripts/setup-firebase.ps1",
+    "verify:staging": "powershell -ExecutionPolicy Bypass -File ./scripts/verify-deployment.ps1 -Environment staging",
+    "verify:production": "powershell -ExecutionPolicy Bypass -File ./scripts/verify-deployment.ps1 -Environment production",
+    "deploy:helper": "powershell -ExecutionPolicy Bypass -File ./scripts/deploy.ps1"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.15.1",
@@ -49,6 +56,6 @@
     "sharp": "^0.34.4",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "vite": "7.1.9"
   }
 }
