--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,9 +2,9 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, develop, feature/** ]
+    branches: [ main, feature/** ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main ]
 
 permissions:
   contents: read
@@ -12,8 +12,8 @@ permissions:
   pull-requests: write
 
 jobs:
-  # Job de testing y linting
-  test:
+  # Test y Build
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -21,139 +21,156 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
       
-      - name: Install dependencies
+      # Portfolio
+      - name: Install portfolio dependencies
         run: npm ci
       
       - name: Run linter
-        run: npm run lint --if-present
+        run: npm run lint
       
       - name: Run type check
-        run: npm run type-check --if-present
+        run: npm run type-check
       
-      - name: Run tests
-        run: npm run test --if-present
+      # Blog
+      - name: Install blog dependencies
+        run: cd microfrontends/angular-blog && npm ci
       
-      - name: Build project
-        run: npm run build
+      - name: Build blog
+        run: npm run build:blog
+      
+      # Build según ambiente
+      - name: Build portfolio (staging)
+        if: github.event_name == 'pull_request'
+        run: npm run build -- --mode staging
         env:
+          VITE_BLOG_URL: https://porfolio-vlad-staging.web.app/blog
           VITE_EMAIL_SERVICE: ${{ secrets.MY_EMAIL_SERVICE }}
           VITE_EMAIL_TO: ${{ secrets.MY_EMAIL_TO }}
           VITE_EMAIL_PASS: ${{ secrets.MY_EMAIL_PASS }}
+      
+      - name: Build portfolio (production)
+        if: github.ref == 'refs/heads/main'
+        run: npm run build -- --mode production
+        env:
+          VITE_BLOG_URL: https://porfolio-vlad.web.app/blog
+          VITE_EMAIL_SERVICE: ${{ secrets.MY_EMAIL_SERVICE }}
+          VITE_EMAIL_TO: ${{ secrets.MY_EMAIL_TO }}
+          VITE_EMAIL_PASS: ${{ secrets.MY_EMAIL_PASS }}
+      
+      - name: Prepare deploy files
+        run: npm run prepare:deploy
+      
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist/
+          retention-days: 1
 
-  # Job de security scan
+  # Security scan
   security:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       
-      - name: Run npm audit
-        run: npm audit --audit-level high
-        continue-on-error: true
-      
-      - name: Check for vulnerabilities
-        run: npm audit --audit-level critical
-
-  # Job de performance check
-  lighthouse:
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.event_name == 'pull_request'
-    steps:
-      - uses: actions/checkout@v4
-      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
-          cache: 'npm'
+          node-version: '20'
       
-      - name: Install dependencies
-        run: npm ci
+      - name: Run npm audit (portfolio)
+        run: npm audit --audit-level moderate
+        continue-on-error: true
       
-      - name: Build project
-        run: npm run build
-        env:
-          VITE_EMAIL_SERVICE: ${{ secrets.MY_EMAIL_SERVICE }}
-          VITE_EMAIL_TO: ${{ secrets.MY_EMAIL_TO }}
-          VITE_EMAIL_PASS: ${{ secrets.MY_EMAIL_PASS }}
-      
-      - name: Serve and run Lighthouse
-        run: |
-          npm install -g lighthouse
-          npx serve -s dist -p 3000 &
-          sleep 5
-          lighthouse http://localhost:3000 --chrome-flags="--headless" --output=json --output-path=./lighthouse-results.json
+      - name: Run npm audit (blog)
+        run: cd microfrontends/angular-blog && npm audit --audit-level moderate
         continue-on-error: true
 
-  # Job de deploy a Firebase
-  deploy:
+  # Deploy a Staging (PRs)
+  deploy-staging:
+    needs: [build, security]
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
-    needs: [test, security]
-    # Solo ejecutar en push a main (no en PRs)
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     steps:
       - uses: actions/checkout@v4
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
         with:
-          node-version: '18'
-          cache: 'npm'
+          name: dist
+          path: dist/
       
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Build project for production
-        run: npm run build
-        env:
-          VITE_EMAIL_SERVICE: ${{ secrets.MY_EMAIL_SERVICE }}
-          VITE_EMAIL_TO: ${{ secrets.MY_EMAIL_TO }}
-          VITE_EMAIL_PASS: ${{ secrets.MY_EMAIL_PASS }}
-      
-      - name: Deploy to Firebase
+      - name: Deploy to Firebase Staging
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PORFOLIO_VLAD }}
-          projectId: portfolio-896a3
-          channelId: live
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PORFOLIO_VLAD_STAGING }}
+          projectId: porfolio-vlad-staging
+          expires: 7d
+        id: firebase-deploy
+      
+      - name: Comment PR with preview URL
+        uses: actions/github-script@v7
+        if: always()
+        with:
+          script: |
+            const output = `#### 🚀 Deploy to Staging
+            
+            **Status**: ${{ job.status }}
+            **Preview URL**: https://porfolio-vlad-staging.web.app
+            **Blog URL**: https://porfolio-vlad-staging.web.app/blog
+            
+            Expires in 7 days.
+            
+            <details>
+            <summary>Show Details</summary>
+            
+            \`\`\`
+            Project: porfolio-vlad-staging
+            Environment: staging
+            Commit: ${{ github.sha }}
+            \`\`\`
+            </details>`;
+            
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
 
-  # Job de deploy preview para PRs
-  deploy-preview:
+  # Deploy a Production (merge a main)
+  deploy-production:
+    needs: [build, security]
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     runs-on: ubuntu-latest
-    needs: [test]
-    # Solo ejecutar en PRs a main
-    if: github.event_name == 'pull_request' && github.base_ref == 'main'
     
     steps:
       - uses: actions/checkout@v4
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
         with:
-          node-version: '18'
-          cache: 'npm'
+          name: dist
+          path: dist/
       
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Build project for preview
-        run: npm run build
-        env:
-          VITE_EMAIL_SERVICE: ${{ secrets.MY_EMAIL_SERVICE }}
-          VITE_EMAIL_TO: ${{ secrets.MY_EMAIL_TO }}
-          VITE_EMAIL_PASS: ${{ secrets.MY_EMAIL_PASS }}
-      
-      - name: Deploy preview to Firebase
+      - name: Deploy to Firebase Production
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PORFOLIO_VLAD }}
           projectId: porfolio-vlad
-          expires: 30d
-        env:
-          FIREBASE_CLI_EXPERIMENTS: webframeworks
+          channelId: live
+      
+      - name: Create deployment summary
+        run: |
+          echo "### 🎉 Deployment Successful!" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Portfolio**: https://porfolio-vlad.web.app" >> $GITHUB_STEP_SUMMARY
+          echo "**Blog**: https://porfolio-vlad.web.app/blog" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "Commit: ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
