feat: actualizar script de preparación de despliegue para usar Node en lugar de PowerShell

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "tsc -b && vite build",
     "build:blog": "cd microfrontends/angular-blog && npm run build",
     "build:all": "npm run build && npm run build:blog && npm run prepare:deploy",
-    "prepare:deploy": "powershell -ExecutionPolicy Bypass -File ./scripts/prepare-deploy.ps1",
+    "prepare:deploy": "node scripts/prepare-deploy.mjs",
+    "prepare:deploy:ps1": "powershell -ExecutionPolicy Bypass -File ./scripts/prepare-deploy.ps1",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
